@@ -114,7 +114,7 @@ void relay_channel_notice(struct Client* sptr, const char* name, const char* tex
   assert(0 != name);
   assert(0 != text);
 
-  if (0 == (chptr = FindChannel(name)))
+  if (*name == '&' || 0 == (chptr = FindChannel(name)))
     return;
   /*
    * This first: Almost never a server/service
@@ -165,7 +165,7 @@ void server_relay_channel_message(struct Client* sptr, const char* name, const c
   assert(0 != name);
   assert(0 != text);
 
-  if (0 == (chptr = FindChannel(name))) {
+  if (*name == '&' || 0 == (chptr = FindChannel(name))) {
     /*
      * XXX - do we need to send this back from a remote server?
      */
